# vscode-vcpkg-template

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/: CMakeLists.txt  boost_asio.cc  echo_server_with_as_tuple_default.cc
